--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -6,4 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".DetailedActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/detaile_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="150dp"
+        android:background="@color/ic_launcher_background"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:background="#B7FAEA"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/detatile_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#E91E63"
+            android:text="TextView"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/detaile_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#9C27B0"
+            android:text="TextView"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/detaile_favry"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:src="@drawable/ic_favorite_border_black_while24dp"></ImageView>
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
