--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -53,19 +53,20 @@
 
                 <ImageView
                     android:id="@+id/work_favorite"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="20dp"
                     android:src="@drawable/ic_favorite_border_black_while24dp"
                     tools:layout_marginTop="2dp"
                     />
+
                 <TextView
                     android:id="@+id/work_numbers"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="15dp"/>
+                    android:layout_marginEnd="8dp" />
             </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
