--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="150dp"
-        android:background="@color/ic_launcher_background"
+        android:background="#009688"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="vertical"
-        android:background="#B7FAEA"
+        android:background="#009688"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
