--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="150dp"
-        android:background="#009688"
+        android:background="#ABD3B9"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="vertical"
-        android:background="#009688"
+        android:background="#ABD3B9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -48,7 +48,9 @@
             android:layout_height="40dp"
             android:layout_gravity="right"
             android:layout_marginRight="30dp"
-            android:src="@drawable/ic_favorite_border_black_while24dp"></ImageView>
+            android:src="@drawable/ic_favorite_border_black_while24dp">
+
+        </ImageView>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
